--- a/Proyecto_web/src/main/resources/static/css/consulta.css
+++ b/Proyecto_web/src/main/resources/static/css/consulta.css
@@ -3,3 +3,50 @@
     Author     : jose
 */
 
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200&display=swap');
+
+*{
+    margin:0;
+    padding:0;
+    box-sizing: border-box;
+    font-family: 'Oswald', sans-serif;
+}
+body {
+    height: 100vh;
+    width: 100%;
+    background-image: url(../images/rayo.gif);
+    background-position: center;
+    background-size: cover;
+    padding-left: 5%;
+    padding-right: 5%;
+    box-sizing: border-box;	
+    position: relative;
+}
+
+.content{
+    position: absolute;
+    top: 25%;
+    left: 75%;
+    width: 400px;
+    border-radius: 10px;
+    box-shadow: 10px 10px 15px rgba(0,0,0,0,5);
+    transform: translate(-50%, -50%);
+    background-color: #EFD7D3;
+}
+
+.content h1{
+    text-align: center;
+    padding:20px 0;
+    border-bottom:1px solid silver;
+}
+
+.content form{
+    padding: 0 40px;
+    box-sizing: border-box;
+}
+
+form.txt_field{
+    position: relative;
+    border-bottom: 2px solid #E70202;
+    margin: 30px 0;
+}
