--- a/Proyecto_web/src/main/resources/static/css/contacto.css
+++ b/Proyecto_web/src/main/resources/static/css/contacto.css
@@ -3,3 +3,54 @@
     Author     : jose
 */
 
+@import url('https://fonts.googleapis.com/css2?family=Teko:wght@300&display=swap');
+
+*{
+    margin:0;
+    padding:0;
+    box-sizing: border-box;
+    font-family: 'Teko', sans-serif;
+}
+
+.container{
+	height: 100vh;
+	width: 100%;
+        background-color: #DCF0CD;
+	background-position: center;
+	background-size: cover;
+	padding-left: 5%;
+	padding-right: 5%;
+	box-sizing: border-box;	
+	position: relative;
+}
+
+.content p{
+	font-size: 20px;
+	color: #7521AE;
+}
+.content h1{
+	font-size: 60px;
+	font-weight: 100;
+	margin-bottom: 15px;
+	color: #5B1A88;
+}
+.social{
+	margin-top: 40px;
+	display: flex;
+}
+.social img{
+	width: 50px;
+	margin-right: 25px;
+}
+
+.content ul li {
+	display: inline-block;
+	list-style: none;
+	margin: 0px 20px;
+}
+
+.content ol li {
+	display: inline-block;
+	list-style: none;
+	margin: 0px 20px;
+}
