--- a/Proyecto_web/src/main/resources/static/css/reservar.css
+++ b/Proyecto_web/src/main/resources/static/css/reservar.css
@@ -3,3 +3,88 @@
     Author     : jose
 */
 
+@import url('https://fonts.googleapis.com/css2?family=Maven+Pro:wght@500&display=swap');
+
+*{
+        margin:0;
+        padding:0;
+        box-sizing: border-box;
+        font-family: 'Shadows Into Light', cursive;
+}
+
+.container{
+	height: 100vh;
+	width: 100%;
+        background-color: #DCF0CD;
+	background-position: center;
+	background-size: cover;
+	padding-left: 0%;
+	padding-right: 0%;
+	box-sizing: border-box;	
+	position: relative;
+}
+
+.container h1{
+        width: 100%;
+        height: 200px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background: #C9EEAD;
+}
+
+.container h2{
+        width: 100%;
+        height: 100px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+}
+
+.container ul{
+        width: 100%;
+        height: 100px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+}
+
+.container ul li{
+        width: 100%;
+        height: 100px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+}
+
+.container ul a{
+        width: 100%;
+        height: 100px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+}
+
+.link ul{
+        width: 100%;
+        height: 100px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+}
+
+.link ul li{
+        width: 100%;
+        height: 100px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+}
+
+.link ul li a{
+        width: 100%;
+        height: 100px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+}
