--- a/Proyecto_web/src/main/resources/static/css/index.css
+++ b/Proyecto_web/src/main/resources/static/css/index.css
@@ -71,15 +71,6 @@ nav ul li a {
 	margin-top: 1px;
 	
 }
-/*.info p{
-        margin-left: 5%;
-        padding: 0;
-        font-size: 18px;
-        font-weight: 700;
-        margin-left: 60px;
-	margin-top: 1px;
-}
-*/
 
 .info img{
 	width: 400px;
@@ -91,4 +82,10 @@ nav ul li a {
 	position: absolute;
 	bottom: 75px;
 	right: 20px;
+}
+.p{
+    	font-size: 50px;
+        font-weight: 900;
+	margin-top:150px;
+	margin-bottom: 10px;
 }
